--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.1.3"
+    "axios": "^1.1.3",
+    "bootstrap": "^5.2.2",
+    "formik": "^2.2.9",
+    "yup": "^0.32.11"
   }
 }
